[project]
name = "pywinter"
version = "2.0.6"
description = "Read and Create MPAS/WRF-WPS intermediate files"
authors = [
  { name = "Danilo A Suarez H", email = "dniloash@gmail.com" },
]
keywords = ["Python","MPAS","WRF", "WPS", "Intermediate files"]
classifiers = []
readme = "README.md"
requires-python  = ">= 3.9"
dependencies = [
    "numpy",
]

[project.urls]
Repository = "https://github.com/dniloash/Pywinter"
Documentation = "https://pywinter.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = [
    "netcdf4>=1.7.2",
]

[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = "CMakeLists.txt"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.ruff]
target-version = "py39"

[tool.basedpyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
